2007-03-05 21:21  nick

	* plugins/launcher/launcher.c: Replace the enter/leave signals since there are
	  deprecated. If someone knows a property to sync this with an exo_mutual_binding
	  I'd like to hear it.

2007-03-05 10:39  nick

	* libxfce4panel/xfce-panel-macros.c: Replace the g_type_register_static_simple
	  by a slightly better _panel_g_type_register_simple.
	* plugins/launcher/launcher.c: Remove GTK_ARROW_NONE, to fix compilation problems
	  on Gtk 2.8.

2007-03-04 20:48  nick

	* panel/panel-dialogs.c: Remove the position combobox, this is not working
	  and thus only confusing for other people ^_^.

2007-03-04 20:32  nick

	* libxfce4panel/xfce-panel-macros.{c,h}: Add a macro for
	  g_type_register_static_simple which is only available in Glib 2.12.
	* libxfce4panel/*.c: Use g_type_register_static_simple where possible to
	  reduce the number of relocations.

2007-03-04 16:14  nick

	* panel/main.c, panel/panel-app.{c,h}: Fix problem with session management
	  and move the last lines of code from the 4_5_nick branch to trunk.

2007-03-03 21:00  nick

	* panel/*: Import all the code from my branch to trunk. Only the main.c
	  file is different in the branch because it contains a problem that
	  causes Xfce to start very slowly (the session manager).

2007-03-03 21:00  nick

	* Import my 4_5_nick branch into trunk:
	  - Completely rewritten launcher (Bugs 2336, 2365, 1323, 2262 and 1225)
	  - Various improvements in libxfce4panel (memory leaks, G_GNUC_INTERNAL,
	    GSList, canonical strings and fixed pedantic warnings).
	  - Libxfce4panel does no longer depend on libxfcegui4. This might cause
	    some problems with plugins. Plugin developers should add libxfcegui4
	    to the dependencies of their package (including cflags and libadd in
	    the makefiles).

2007-01-19 19:59  nick

	* NEWS: Update NEWS

2007-01-19 16:56  nick

	* ChangeLog, plugins/clock/clock.c,
	  plugins/windowlist/windowlist.c: Fix crash when moving the
	  plugin. Bug #2775.