@@ -1,3 +1,8 @@
+2007-03-05 21:55  nick
+
+	* panel/panel-dialogs.c: Set Full Height or Full Width based on the panel position.
+	  This partly fixes Bug #2465.
+
 2007-03-05 21:21  nick
 
 	* plugins/launcher/launcher.c: Replace the enter/leave signals since there are
